[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-post-repeater"
version = "0.1.0"
description = "Normalize and dedupe YouTube community posts for n8n and Telegram workflows"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["youtube_post_repeater"]
